# lab03

./: CMakeLists.txt  main.cpp
include/: figure.h  function.h  rectangle.h  square.h  trapezoid.h
src/: function.cpp  rectangle.cpp  square.cpp  trapezoid.cpp
test/: tests03.cpp
